[package]
name = "rgrep"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1" # 错误处理
clap = "3.0.0-beta.5" # 命令行解析
#clap = "3.0.0-beta.4" # 命令行解析  老师的版本用.4
colored = "2" # 命令终端多彩显示
regex = "1" # 正则匹配
thiserror = "1"
glob = "0.3"
itertools = "0.10"
rayon ="1"